# 2026_Gsing-second_ROS

./: .gitignore  CLAUDE.md  README.md  run.md
2026_Gsing_Dog_simulation-main/: .gitignore  README.md
2026_Gsing_Dog_simulation-main/cv/: CMakeLists.txt  package.xml
2026_Gsing_Dog_simulation-main/cv/src/: cv_node.cpp
2026_Gsing_Dog_simulation-main/description/: CMakeLists.txt  package.xml
2026_Gsing_Dog_simulation-main/description/src/camera/: camera.sdf  model.config
2026_Gsing_Dog_simulation-main/description/src/car_test/urdf/: camera.xacro  gazebo_control.xacro  inertia_macros.xacro  robot.urdf.xacro
2026_Gsing_Dog_simulation-main/description/src/food/: model.sdf
2026_Gsing_Dog_simulation-main/description/src/instrument/: model.sdf
2026_Gsing_Dog_simulation-main/description/src/instrument/materials/scripts/: instrument.material
2026_Gsing_Dog_simulation-main/description/src/medicine/: model.config
2026_Gsing_Dog_simulation-main/description/src/tool/: tool.sdf
2026_Gsing_Dog_simulation-main/description/urdf/: camera.urdf.xacro  robot.urdf.xacro
2026_Gsing_Dog_simulation-main/image_handle/src/color_test/: CMakeLists.txt  package.xml
2026_Gsing_Dog_simulation-main/image_handle/src/color_test/launch/: color_detection.launch.py
2026_Gsing_Dog_simulation-main/image_handle/src/color_test/src/: color_detection_node.cpp  image_publisher_node.cpp
2026_Gsing_Dog_simulation-main/simulation/: CMakeLists.txt  CMakeLists.txt.bak.1772369859  package.xml
2026_Gsing_Dog_simulation-main/simulation/config/: bridge.yaml
2026_Gsing_Dog_simulation-main/simulation/src/launch/: sim.launch.py
2026_Gsing_Dog_simulation-main/simulation/src/scripts/: path_planner.py
2026_Gsing_Dog_simulation-main/simulation/worlds/: test.world  test1.world
fastlio2_v2/: README.md  auto_map_save.sh
fastlio2_v2/src/: fast_lio_config.rviz
fastlio2_v2/src/fast_lio_localization/: livox.launch.py  localization.launch.py  package.xml  setup.py
fastlio2_v2/src/fast_lio_localization/config/: unilidar_l2.yaml
fastlio2_v2/src/fast_lio_localization/fast_lio_localization/: global_localization.py  lvbo.py  pointcloud_to_ros_map.py  publish_initial_pose.py  tf_transformations.py  transform_fusion.py
fastlio2_v2/src/fast_lio_localization/hook/: ament_prefix_path.sh
fastlio2_v2/src/fast_lio_localization/launch/: 1.launch.py  livox.launch.py  unitree.launch.py
fastlio2_v2/src/fast_lio_localization/rviz/: fastlio_localization.rviz
fastlio2_v2/src/fast_lio_localization/scripts/: hook_fix.sh
fastlio2_v2/src/my_odom_tf_pkg/: CMakeLists.txt  package.xml
fastlio2_v2/src/my_odom_tf_pkg/src/: odom_to_tf.cpp
fastlio2_v2/src/pcd2pgm/config/: pcd2pgm.yaml
fastlio2_v2/src/pcd2pgm/launch/: pcd2pgm_launch.py
fastlio2_v2/src/unilidar_fastlio_ros2-ros2/PCD/: pgm_map.pgm  pgm_map.yaml
fastlio2_v2/src/unilidar_fastlio_ros2-ros2/config/: unilidar_l2.yaml  unilidar_l22.yaml
fastlio2_v2/src/unilidar_fastlio_ros2-ros2/launch/: map_server_launch.py  mapping.launch.py  mapping2.launch.py
fastlio2_v2/src/unilidar_fastlio_ros2-ros2/rviz/: fastlio.rviz
fastlio2_v2/src/unilidar_fastlio_ros2-ros2/src/: IMU_Processing.hpp  laserMapping.cpp  odometry_to_tf.cpp  preprocess.cpp  preprocess.h
fastlio2_v2/src/unitree_lidar_ros2/src/unitree_lidar_ros2/launch/: launch.py
fastlio2_v2/src/unitree_lidar_ros2/src/unitree_lidar_ros2/rviz/: view.rviz
fastlio2_v2/tools/pcd_to_gridmap/: CMakeLists.txt  README.md
fastlio2_v2/tools/pcd_to_gridmap/src/: pcd_to_gridmap.cpp
fastlio2_v2/tools/pcd_to_octomap/: CMakeLists.txt  README.md
fastlio2_v2/tools/pcd_to_octomap/src/: pcd_to_octomap.cpp
nav2_ws1/: readme.md
nav2_ws1/src/dog_nav2_bringup/: CMakeLists.txt  package.xml
nav2_ws1/src/dog_nav2_bringup/docs/: CHASSIS_SERIAL.md
nav2_ws1/src/dog_nav2_bringup/launch/: chassis_serial_bridge.launch.py  nav2_fastlio_bringup.launch.py  nav2_fastlio_static_map.launch.py
nav2_ws1/src/dog_nav2_bringup/maps/: 0号：绿色（食品箱）  README.md  scans.pcd.yaml  scans_new.pcd.pgm  scans_new.pcd.yaml  scans_new.pgm  scans_new.yaml  task_field_map.pgm  task_field_map.yaml
nav2_ws1/src/dog_nav2_bringup/params/: nav2_fastlio_params.yaml  nav2_fastlio_static_map_params.yaml  nav2_task_params.yaml
nav2_ws1/src/dog_nav2_bringup/rviz/: nav2_fastlio.rviz  nav2_fastlio_static_map.rviz
nav2_ws1/src/dog_nav2_bringup/scripts/: cmd_vel_chassis_serial.py  costmap_to_grid.py  generate_custom_map.sh  generate_standard_map.sh  goal_pose_to_nav2.py  nav2_task_launch.py  send_chassis_test_serial.py  start_nav2.sh  start_nav2_full.sh  task_field_competition.sh  task_field_map_full.sh
py/: camera_four_colors_config.json  catch.py  check_gz_services.py  cube_detector.py  fastlio_pose.py  folder_summary.py  listen_serial.py  move.py  pointcloud_saver.py  test_dog.py  test_interactive.py  test_ros2.py
ros2_jazzy_venv/: pyvenv.cfg
