<?xml version="1.0"?>
<package format="3">
  <name>fast_lio_localization</name>
  <version>0.0.0</version>
  <description>Global relocalization module for FAST-LIO2 in pre-built maps</description>
  <maintainer email="hyper@localhost">hyper</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
